Label missplaced in kernel/trace/Kconfig
Hi Thomas,

there is a strange problem in kernel/trace/Kconfig:

Here

config INTERRUPT_OFF_HIST
         bool "Interrupts off critical timings histogram"

and here

config WAKEUP_LATENCY_HIST
         bool "Interrupts off critical timings histogram"

the same label is used, but at the second occurrence the label should 
most probably read

config WAKEUP_LATENCY_HIST
         bool "Wakeup latencies histogram"

or similar. Patch see below.

I called it a "strange" problem, because it is so obvious and everybody 
who was editing this kernel configuration, must have seen it. Any idea 
what happened here?


Carsten.

--- a/kernel/trace/Kconfig
+++ b/kernel/trace/Kconfig
@@ -144,7 +144,7 @@ config PREEMPT_OFF_HIST
 	  preemption off timings to create a histogram of latencies.
 
 config WAKEUP_LATENCY_HIST
-	bool "Interrupts off critical timings histogram"
+	bool "Wakeup latencies histogram"
 	depends on SCHED_TRACER
 	help
 	  This option uses the infrastructure of the wakeup tracer
