preempt-realtime-ia64
Hi,

This is a first version of my port of Ingo's -rt kernel to the IA64 arch.

So far the kernel boots with PREEMPT_RT enabled (on a 4-cpu tiger), and 
that's about it. I've not done extensive tests (only scripts/rt-tester), 
nor any measurements of any kind.

There's very probably many bugs I'm not aware of.

But there is already one thing I know should be fixed : I've changed the 
declaration of (struct zone).lock (in include/linux/mmzone.h) from 
spinlock_t to raw_spinlock_t. 

I did this because on IA64, cpu_idle(), which is not allowed to call 
schedule(), calls check_pgt_cache(). I guess this could be fixed by moving 
this call to another kernel thread... ideas are welcome.


	Simon.




Signed-off-by: Simon.Derr@bull.net

 arch/ia64/Kconfig                 |   64 +++++++++++++++++++++++++
 arch/ia64/kernel/asm-offsets.c    |    2 
 arch/ia64/kernel/entry.S          |   25 +++++-----
 arch/ia64/kernel/fsys.S           |   21 ++++++++
 arch/ia64/kernel/iosapic.c        |   33 ++++++++++++-
 arch/ia64/kernel/mca.c            |    2 
 arch/ia64/kernel/perfmon.c        |    6 +-
 arch/ia64/kernel/process.c        |   14 +++--
 arch/ia64/kernel/sal.c            |    2 
 arch/ia64/kernel/salinfo.c        |    6 +-
 arch/ia64/kernel/semaphore.c      |    8 +--
 arch/ia64/kernel/signal.c         |    8 +++
 arch/ia64/kernel/smp.c            |   16 ++++++
 arch/ia64/kernel/smpboot.c        |    3 +
 arch/ia64/kernel/time.c           |   74 +++++++++++++++++++----------
 arch/ia64/kernel/traps.c          |   10 ++--
 arch/ia64/kernel/unwind.c         |    4 -
 arch/ia64/kernel/unwind_i.h       |    2 
 arch/ia64/mm/init.c               |    2 
 arch/ia64/mm/tlb.c                |    2 
 include/asm-ia64/irqflags.h       |   95 ++++++++++++++++++++++++++++++++++++++
 include/asm-ia64/mmu_context.h    |    2 
 include/asm-ia64/percpu.h         |   21 +++++++-
 include/asm-ia64/processor.h      |    6 +-
 include/asm-ia64/rtc.h            |    7 ++
 

--- a/arch/ia64/Kconfig
+++ b/arch/ia64/Kconfig
@@ -44,6 +44,7 @@ config SWIOTLB
 
 config RWSEM_XCHGADD_ALGORITHM
 	bool
+	depends on !PREEMPT_RT
 	default y
 
 config ARCH_HAS_ILOG2_U32
@@ -279,6 +280,69 @@ config SMP
 	  available at <http://www.tldp.org/docs.html#howto>.
 
 	  If you don't know what to do here, say N.
+
+
+config GENERIC_TIME
+       bool
+       default y
+
+config HIGH_RES_TIMERS
+	bool "High-Resolution Timers"
+	help
+
+	  POSIX timers are available by default.  This option enables
+	  high-resolution POSIX timers.  With this option the resolution
+	  is at least 1 microsecond.  High resolution is not free.  If
+	  enabled this option will add a small overhead each time a
+	  timer expires that is not on a 1/HZ tick boundary.  If no such
+	  timers are used the overhead is nil.
+
+	  This option enables two additional POSIX CLOCKS,
+	  CLOCK_REALTIME_HR and CLOCK_MONOTONIC_HR.  Note that this
+	  option does not change the resolution of CLOCK_REALTIME or
+	  CLOCK_MONOTONIC which remain at 1/HZ resolution.
+
+config HIGH_RES_RESOLUTION
+	int "High-Resolution-Timer resolution (nanoseconds)"
+	depends on HIGH_RES_TIMERS
+	default 1000
+	help
+
+	  This sets the resolution of timers accessed with
+          CLOCK_REALTIME_HR and CLOCK_MONOTONIC_HR.  Too
+	  fine a resolution (small a number) will usually not
+          be observable due to normal system latencies.  For an
+          800 MHZ processor about 10,000 is the recommended maximum
+	  (smallest number).  If you don't need that sort of resolution,
+	  higher numbers may generate less overhead.
+
+choice
+	prompt "Clock source"
+	depends on HIGH_RES_TIMERS
+	default HIGH_RES_TIMER_ITC
+	help
+	  This option allows you to choose the hardware source in charge
+	  of generating high precision interruptions on your system.
+	  On IA-64 these are:
+
+	  <timer>				<resolution>
+	  ITC Interval Time Counter		1/CPU clock
+	  HPET High Precision Event Timer	~ (XXX:have to check the spec)
+
+	  The ITC timer is available on all the ia64 computers because
+	  it is integrated directly into the processor. However it may not
+	  give correct results on MP machines with processors running
+	  at different clock rates. In this case you may want to use
+	  the HPET if available on your machine.
+
+
+config HIGH_RES_TIMER_ITC
+	bool "Interval Time Counter/ITC"
+
+config HIGH_RES_TIMER_HPET
+	bool "High Precision Event Timer/HPET"
+
+endchoice
 
 config NR_CPUS
 	int "Maximum number of CPUs (2-1024)"
