radix-tree: optimistic locking
Implement optimistic locking for the concurrent radix tree.

Optimistic locking is aimed at avoiding taking higher level node locks.
We decent the tree using an RCU lookup, looking for the lowest modification
termination point.

If found, we try to acquire the lock of that node. After we have obtained this
lock, we will need to validate if the initial conditions still hold true. We do
this by repeating the steps that found us this node in the first place.

Signed-off-by: Peter Zijlstra <a.p.zijlstra@chello.nl>

--- a/init/Kconfig
+++ b/init/Kconfig
@@ -437,7 +437,13 @@ config SYSCTL
 
 config RADIX_TREE_CONCURRENT
 	bool "Enable concurrent radix tree operations (EXPERIMENTAL)"
+	depends on EXPERIMENTAL
 	default y if SMP
+
+config RADIX_TREE_OPTIMISTIC
+	bool "Enabled optimistic locking (EXPERIMENTAL)"
+	depends on RADIX_TREE_CONCURRENT
+	default y
 
 menuconfig EMBEDDED
 	bool "Configure standard kernel features (for small systems)"
