Allocate-RTSJ-memory-for-TCK-conformance-test
Allocate RTSJ memory for TCK conformance test.

From: Theodore Ts'o <tytso@mit.edu>

This kernel message allocates memory which is required by the
real-time TCK conformance test which tests the JVM's RTSJ
implementation.  Unfortunately, RTSJ requires that Java programs have
direct access to physical memory.  This kernel reserves memory which
can then be used by an external /dev/rmem loadable kernel module.

Signed-off-by: "Theodore Ts'o" <tytso@mit.edu>

--- a/drivers/char/Kconfig
+++ b/drivers/char/Kconfig
@@ -1083,6 +1083,13 @@ config RMEM
 	  patching /dev/mem because we don't expect this functionality
 	  to ever be accepted into mainline.
 
+config ALLOC_RTSJ_MEM
+	tristate "RTSJ-specific hack to reserve memory"
+	default m
+	help
+	  The RTSJ TCK conformance test requires reserving some physical
+	  memory for testing /dev/rmem.
+
 config DEVPORT
 	bool
 	depends on !M68K
