--- a/arch/mips/Kconfig
+++ b/arch/mips/Kconfig
@@ -52,6 +52,7 @@ config BCM47XX
 	select CEVT_R4K
 	select CSRC_R4K
 	select DMA_NONCOHERENT
+	select NO_SPINLOCK
 	select HW_HAS_PCI
 	select IRQ_CPU
 	select SYS_HAS_CPU_MIPS32_R1
@@ -703,10 +704,17 @@ endmenu
 
 config RWSEM_GENERIC_SPINLOCK
 	bool
+	depends on !PREEMPT_RT
 	default y
 
 config RWSEM_XCHGADD_ALGORITHM
 	bool
+	depends on !PREEMPT_RT
+
+config ASM_SEMAPHORES
+	bool
+#	depends on !PREEMPT_RT
+	default y
 
 config ARCH_HAS_ILOG2_U32
 	bool
@@ -806,6 +814,9 @@ config DMA_NONCOHERENT
 	select DMA_NEED_PCI_MAP_STATE
 
 config DMA_NEED_PCI_MAP_STATE
+	bool
+
+config NO_SPINLOCK
 	bool
 
 config EARLY_PRINTK
@@ -1888,10 +1899,6 @@ config SECCOMP
 	  If unsure, say Y. Only embedded should say N here.
 
 endmenu
-
-config RWSEM_GENERIC_SPINLOCK
-	bool
-	default y
 
 config LOCKDEP_SUPPORT
 	bool
