preempt-realtime-mips
arch/mips/Kconfig                 |   13 ++
 arch/mips/kernel/asm-offsets.c    |    2 
 arch/mips/kernel/entry.S          |   22 +++-
 arch/mips/kernel/i8259.c          |    2 
 arch/mips/kernel/module.c         |    2 
 arch/mips/kernel/process.c        |    8 +
 arch/mips/kernel/scall32-o32.S    |    2 
 arch/mips/kernel/scall64-64.S     |    2 
 arch/mips/kernel/scall64-n32.S    |    2 
 arch/mips/kernel/scall64-o32.S    |    2 
 arch/mips/kernel/semaphore.c      |   22 +++-
 arch/mips/kernel/signal.c         |    4 
 arch/mips/kernel/signal32.c       |    4 
 arch/mips/kernel/smp.c            |   27 +++++
 arch/mips/kernel/traps.c          |    2 
 arch/mips/mm/init.c               |    2 
 arch/mips/sibyte/cfe/smp.c        |    4 
 arch/mips/sibyte/sb1250/irq.c     |    6 +
 arch/mips/sibyte/sb1250/smp.c     |    2 
 arch/mips/sibyte/swarm/setup.c    |    6 +
 include/asm-mips/asmmacro.h       |    8 -
 include/asm-mips/atomic.h         |    1 
 include/asm-mips/bitops.h         |    5 -
 include/asm-mips/hw_irq.h         |    1 
 include/asm-mips/i8259.h          |    2 
 include/asm-mips/io.h             |    1 
 include/asm-mips/linkage.h        |    5 +
 include/asm-mips/m48t35.h         |    2 
 include/asm-mips/rwsem.h          |  176 ++++++++++++++++++++++++++++++++++++++
 include/asm-mips/semaphore.h      |   31 +++---
 include/asm-mips/spinlock.h       |   18 +--
 include/asm-mips/spinlock_types.h |    4 
 include/asm-mips/thread_info.h    |    2 
 include/asm-mips/time.h           |    2 
 include/asm-mips/timeofday.h      |    5 +
 include/asm-mips/uaccess.h        |   12 --
 36 files changed, 331 insertions(+), 80 deletions(-)

--- a/arch/mips/Kconfig
+++ b/arch/mips/Kconfig
@@ -702,18 +702,16 @@ source "arch/mips/vr41xx/Kconfig"
 
 endmenu
 
+
 config RWSEM_GENERIC_SPINLOCK
 	bool
-	depends on !PREEMPT_RT
 	default y
 
 config RWSEM_XCHGADD_ALGORITHM
 	bool
-	depends on !PREEMPT_RT
 
 config ASM_SEMAPHORES
 	bool
-#	depends on !PREEMPT_RT
 	default y
 
 config ARCH_HAS_ILOG2_U32
@@ -1898,6 +1896,15 @@ config SECCOMP
 
 	  If unsure, say Y. Only embedded should say N here.
 
+config GENERIC_TIME
+	bool
+	default y
+
+source "kernel/time/Kconfig"
+
+config CPU_SPEED
+	int "CPU speed used for clocksource/clockevent calculations"
+	default 600
 endmenu
 
 config LOCKDEP_SUPPORT
